# t-display-clock

./: .gitignore  README.md  pyproject.toml  upload.sh
src/: boot.py  main.py
src/lib/: JetBrains_105_numbers.py  UbuntuMono_14.py  UbuntuMono_20.py  UbuntuMono_40.py  UbuntuMono_70.py  class_display.py  class_wifi.py  utils.py
src/lib/primitives/: delay_ms.py
